shawk/awk/rdpg/src/compiler/parser/tests/accept/bad.txt
error: grammars/bad.rdpg:5:10
unexpected: '?' after 'terminal' with value 'BAR'
  expected: '\', 'terminal' , 'non-terminal' , '|' , ';' 
    5 | foo : BAR? ;
      |          ^
error: grammars/bad.rdpg:7:10
unexpected: 'terminal' with value 'BAR' after '\'
  expected: 'non-terminal'
    7 | foo : \BAR ;
      |        ^
